fix spacing issue

--- a/client/src/Components/Input/Input.css
+++ b/client/src/Components/Input/Input.css
@@ -1,4 +1,4 @@
-.form {
+/* .form {
   display: flex;
   border-top: 2px solid #d3d3d3;
 }
@@ -15,7 +15,7 @@ input:focus,
 textarea:focus,
 select:focus {
   outline: none;
-}
+} */
 
 .sendButton {
   color: #fff !important;
